# Amnezia-Web-Panel

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_CUSTOMER_SPLIT_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  app.py  awg_manager.py  build_linux.sh  build_windows.bat  dns_manager.py  docker-compose.yml  pyproject.toml  ssh_manager.py
.claude/: CLAUDE.md
.github/workflows/: build.yml
assets/static/css/: style.css
assets/templates/: base.html  external_users.html  index.html  login.html  my_connections.html  server.html  settings.html  user_share.html  users.html
assets/translations/: en.json  fa.json  fr.json  ru.json  zh.json
docs/: MODERNIZATION_PLAN.md  PROTOCOLS.md  RISK_AUDIT.md  ROADMAP.md  usage.md
protocol_telemt/: config.toml
src/amnezia_panel/: __main__.py  app.py  config.py  ext_api.py  secrets_store.py  ssh_manager.py  telegram_bot.py
src/amnezia_panel/protocols/: awg.py  dns.py  telemt.py  wireguard.py  xray.py
static/css/: style.css
templates/: server.html  users.html
translations/: en.json  ru.json
