[project]
name = "amnezia-web-panel"
version = "1.4.2"
description = "Web panel for managing AmneziaWG / WireGuard / Xray / Telegram-MTProxy servers over SSH."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "starlette>=0.46",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "paramiko>=3.5",
    "cryptography>=44",
    "httpx>=0.27",
    "multicolorcaptcha>=1.2",
]

[project.scripts]
amnezia-panel = "amnezia_panel.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amnezia_panel"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyinstaller>=6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
