[project]
name = "amnezia-web-panel"
version = "1.4.2"
description = "Web panel for managing AmneziaWG / WireGuard / Xray / Telegram-MTProxy servers over SSH."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "starlette>=0.46",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "paramiko>=3.5",
    "cryptography>=44",
    "httpx>=0.27",
    "multicolorcaptcha>=1.2",
]

[project.scripts]
amnezia-panel = "amnezia_panel.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amnezia_panel"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyinstaller>=6",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "RUF059",  # unused-unpacked-variable — noisy for `out, err, code = ssh.run(...)` pattern
    "SIM102",  # collapsible-if — stylistic
    "SIM105",  # suppressible-exception — minor
    "SIM108",  # if-else-block-instead-of-if-exp — readability judgment
    "B007",    # unused-loop-control-variable — false positives on throwaway vars
    "B008",    # function-call-in-default-argument — FastAPI `Depends()` pattern
    "E402",    # module-import-not-at-top — legitimate conditional imports
    "RUF013",  # implicit-optional — low signal
]

[tool.ruff.lint.per-file-ignores]
# Protocol managers embed shell scripts and Dockerfiles as triple-quoted strings.
# Splitting them would break shell syntax inside quoted arguments.
"src/amnezia_panel/protocols/*.py" = ["E501"]
